# libthirdspacevest-simhub

./: .cursorignore  .cursorrules  .gitignore  AI_ONBOARDING.md  BETTERCAM_FIX_PLAN.md  BUILD-RELEASE.md  BUILD.md  CHANGELOG.md  README.md  SCREENHEALTH_UI_REDESIGN_CHECKLIST.md  SCREENHEALTH_UI_REDESIGN_PLAN.md  SCREENHEALTH_UI_REDESIGN_QA.md  build-all-mods.ps1  check-setup.ps1  fix_keyboard.ps1  python-environment-handling.md
modern-third-space/: README.md  TESTING.md  pyproject.toml
modern-third-space/scripts/: check_integrations.py  search_starcitizen_logs.py
modern-third-space/src/modern_third_space/: __init__.py  cli.py  controller.py  legacy_adapter.py  presets.py
modern-third-space/src/modern_third_space.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
modern-third-space/src/modern_third_space/integrations/: __init__.py  base.py  cs2_gsi.py  registry.py
modern-third-space/src/modern_third_space/legacy_port/: __init__.py  thirdspace.py
modern-third-space/src/modern_third_space/server/: __init__.py  acmirage_manager.py  alyx_manager.py  amongus_manager.py  aoe2_manager.py  armareforger_manager.py  daemon.py  (+23 more)
modern-third-space/tests/: __init__.py  test_daemon_device_commands.py  test_daemon_game_mapping_commands.py  test_daemon_player_commands.py  test_device_resolution.py  test_game_integrations.py  test_game_player_mapping.py  test_game_player_mapping_manual.py  test_kcd2_manager.py  test_player_manager.py  test_player_manager_manual.py  test_screen_health_manager.py  test_vest_registry.py  test_vest_registry_manual.py
(+447 files in other folders)
