[project]
name = "modern-third-space"
version = "0.1.0"
description = "Modern Python bridge APIs for the Third Space Vest"
readme = "README.md"
authors = [
  { name = "SimHub Contributors", email = "contact@simhub.dev" }
]
requires-python = ">=3.11"
dependencies = [
  "pyusb>=1.2.1",
  "mss>=9.0.1",
  "dxcam>=0.0.6"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0"
]

[project.scripts]
modern-third-space = "modern_third_space.cli:main"

[tool.setuptools.packages.find]
where = ["src"]


